--- a/src/main/resources/templates/author/book-form.html
+++ b/src/main/resources/templates/author/book-form.html
@@ -96,6 +96,7 @@
                     </div>
 
                     <form th:action="@{/author/books}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="title" class="form-label">
